# stock-market-display

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
API-response-example/: api_weather.json  bit_api_response_ex.json  google_sheets.json
components/: lv_conf.h
google-scripts/: stock-market.gs
main/: CMakeLists.txt  config.h  display_screen.c  main.c  time.c  wifi.c  wifi.h
main/display_screen/: display_config.h  display_screen.c  display_screen.h  home_screen.c  home_screen.h  stock_screen.c  stock_screen.h  wifi_conn_scr.c  wifi_conn_scr.h
main/display_screen/shared/: heading_view.c  heading_view.h
main/display_screen/weather_icons/: w01d.c  w01n.c  w02d.c  w02n.c  w03n.c  w04n.c  w09n.c  w10d.c  w10n.c  w11n.c
main/display_screens/: display_screen.c
main/utils/: battery.c  battery.h  display_init.c  http_client.c  http_client.h  stock_api.c  stock_api.h  time.c  time.h  utils.c  weather.c  weather.h  wifi.c  wifi.h  wifi_config.h
tools/: input_partitions.csv
